Update Travis configuration to use trusty build and latest 2.4 ruby

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: ruby
+sudo: false
+dist: trusty
+cache:
+  bundler: true
 rvm:
-  - 2.3.1
-before_install: gem install bundler -v 1.11.2
+  - 2.4.2
+before_install: gem install bundler
