Implement first transformer
Closes #4
Refs #5

* Updates TrajectPlus to fix #4
* Adds the first transformer, taking StanfordOrganizations data and transforms it into mapped JSON (not 100% complete: see also #10, #12)
* Adds a custom JSON reader for StanfordOrganizations data
* Adds a translation map for Stanford organization types, mapping them onto VIVO types
* Updates README to document transform command

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,3 +2,7 @@ inherit_from: .rubocop_todo.yml
 
 AllCops:
   TargetRubyVersion: 2.3
+
+Style/MixinUsage:
+  Exclude:
+    - lib/rialto/etl/configs/stanford_organizations.rb
