--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sample_data"]
 	path = sample_data
-	url = git@github.com:sul-dlss/rialto-sample-data.git
+	url = https://github.com/sul-dlss/rialto-sample-data.git
