--- a/config/settings.yml
+++ b/config/settings.yml
@@ -6,3 +6,5 @@
 tokens:
   cap: 'dummyvalue'
   wos: 'evendumbervalue'
+sparql_writer:
+  update_url: http://127.0.0.1:9999/blazegraph/namespace/kb/sparql
