Clean up duplication in transformers

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,10 @@ RSpec/IteratedExpectation:
   Exclude:
     - spec/readers/*.rb
 
+RSpec/DescribeClass:
+  Exclude:
+    - spec/transform/*.rb
+
 RSpec/NestedGroups:
   Max: 4
 
