--- a/config/settings.yml
+++ b/config/settings.yml
@@ -6,5 +6,11 @@
 tokens:
   cap: 'dummyvalue'
   wos: 'evendumbervalue'
+  sera:
+    clientid: placeholderid
+    secret: sekret1!
 sparql_writer:
   update_url: http://127.0.0.1:9999/blazegraph/namespace/kb/sparql
+sera:
+  token_url: https://aswsuat.stanford.edu/api/oauth/token
+  service_url: https://aswsuat.stanford.edu
