Lookup and create co-authors using entity resolution service

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,10 @@ Metrics/BlockLength:
     - spec/**/*.rb
     - rialto-etl.gemspec
 
+
+RSpec/ExampleLength:
+  Enabled: false
+
 RSpec/FilePath:
   Enabled: false
 
