--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,19 +1,23 @@
 # These settings can also be provided as environment variables, in the form, e.g.:
-#    SETTINGS__TOKENS__CAP=foobar
+#    SETTINGS__CAP__API_KEY=foobar
 #
 # The mapping is described in `./lib/rialto/etl/configuration.rb`.
 
-tokens:
-  cap: 'dummyvalue'
-  wos: 'evendumbervalue'
-  sera:
-    clientid: placeholderid
-    secret: sekret1!
-sparql_writer:
-  update_url: http://127.0.0.1:9999/blazegraph/namespace/kb/sparql
+cap:
+  api_key: 'dummyvalue'
+
+wos:
+  api_key: 'evendumbervalue'
+
 sera:
+  clientid: placeholderid
+  secret: sekret1!
   token_url: https://aswsuat.stanford.edu/api/oauth/token
   service_url: https://aswsuat.stanford.edu
+
+sparql_writer:
+  update_url: http://127.0.0.1:9999/blazegraph/namespace/kb/sparql
+
 entity_resolver:
   url: http://127.0.0.1:3001/
   api_key: abc123
