Guard against people with no positions
For some people the API was returning no positions.  This prevents a
null pointer error when this happens.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,10 @@ RSpec/DescribeClass:
   Exclude:
     - spec/transform/*.rb
 
+
+RSpec/MultipleExpectations:
+  Enabled: false
+
 RSpec/NestedGroups:
   Max: 4
 
