Add custom geonames translation for Mongolia

--- a/lib/translation_maps/additional_country_names_to_geocode_ids.yaml
+++ b/lib/translation_maps/additional_country_names_to_geocode_ids.yaml
@@ -1,4 +1,5 @@
-peoples r china: 1814991
-wales: 2635167
-scotland: 2635167
 england: 2635167
+mongol peo rep: 2029969
+peoples r china: 1814991
+scotland: 2635167
+wales: 2635167
