Add unmapped countries

--- a/lib/translation_maps/additional_country_names_to_geocode_ids.yaml
+++ b/lib/translation_maps/additional_country_names_to_geocode_ids.yaml
@@ -3,3 +3,6 @@ mongol peo rep: 2029969
 peoples r china: 1814991
 scotland: 2635167
 wales: 2635167
+papua n guinea: 2088628
+cote ivoire: 2287781
+u arab emirates: 290557
