Do not clutter data/ directory with grants
Put extracted and transformed grants in subdirectories like the publication ETL
is doing. Ensure relied-upon dir structure under data/ exists but otherwise
ignore data/.

This dir structure is used by our `whenever`-based ETL schedule in `config/schedule.rb`, and this state must be present for scheduled ETL to run.

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,9 @@ config/honeybadger.yml
 config/settings.local.yml
 config/settings/*.local.yml
 warnings*.log
-!/data/.keep
+/data/
+!/data/grants/.keep
+!/data/pubs/.keep
+!/data/raw/grants/.keep
+!/data/raw/pubs/.keep
 log
