--- a/config/settings.yml
+++ b/config/settings.yml
@@ -25,6 +25,10 @@ wos:
     - '2010-01-01+2013-12-31'
     - '2014-01-01+2017-12-31'
     - '2018-01-01+2021-12-31'
+  # About 3 days
+  max_retries: 96
+  # About 45 minutes
+  max_interval: 2560
 
 sera:
   clientid: placeholderid
